--- a/app.json
+++ b/app.json
@@ -1,26 +1,27 @@
 {
-    "name": "forge-bim360-assets.viewer",
-    "description": "A sample showing how to read BIM 360 **Assets** data with Forge Viewer.",
-    "repository": "https://github.com/Autodesk-Forge/forge-bim360-assets.viewer",
-    "logo": "https://avatars0.githubusercontent.com/u/8017462?v=3&s=200",
+    "name": "aps-bim360-assets-viewer",
+    "description": "A sample showing how to read BIM 360 **Assets** data with Viewer SDK.",
+    "repository": "https://github.com/autodesk-platform-service/aps-bim360-assets-viewer",
+    "logo": "https://avatars.githubusercontent.com/u/114497564?s=200&v=4",
     "keywords": [
         "autodesk",
-        "forge",
+        "aps",
         "bim360",
+        "acc",
         "assets",
         "data-management",
-        "forge-viewer"
+        "viewer-sdk"
     ],
     "env": {
-        "FORGE_CLIENT_ID": {
-            "description": "Forge Client ID"
+        "APS_CLIENT_ID": {
+            "description": "APS Client ID"
         },
-        "FORGE_CLIENT_SECRET": {
-            "description": "Forge Client Secret"
+        "APS_CLIENT_SECRET": {
+            "description": "APS Client Secret"
         },
-        "FORGE_CALLBACK_URL": {
-            "description": "Callback URL of your Forge app, required for 3-legged OAuth",
-            "value": "https://<<YOUR HEROKU APP NAME HERE>>.herokuapp.com/api/forge/callback/oauth"
+        "APS_CALLBACK_URL": {
+            "description": "Callback URL of your APS app, required for 3-legged OAuth",
+            "value": "https://<<YOUR HEROKU APP NAME HERE>>.herokuapp.com/api/aps/callback/oauth"
         }
     },
     "website": "https://developer.autodesk.com/",
