--- a/bim360assets/bim360assets.csproj
+++ b/bim360assets/bim360assets.csproj
@@ -9,7 +9,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Autodesk.Authentication" Version="1.0.0" />
+    <PackageReference Include="Autodesk.DataManagement" Version="1.0.0" />
     <PackageReference Include="Autodesk.Forge" Version="1.9.9" />
+    <PackageReference Include="Autodesk.SdkManager" Version="1.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.7" />
   </ItemGroup>
 
