Refactor controllers, Update README.md nad Year of LICENSE

--- a/bim360assets/bim360assets.csproj
+++ b/bim360assets/bim360assets.csproj
@@ -11,9 +11,9 @@
   <ItemGroup>
     <PackageReference Include="Autodesk.Authentication" Version="1.0.0" />
     <PackageReference Include="Autodesk.DataManagement" Version="1.0.0" />
-    <PackageReference Include="Autodesk.Forge" Version="1.9.9" />
     <PackageReference Include="Autodesk.SdkManager" Version="1.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.7" />
+    <PackageReference Include="RestSharp" Version="110.2.0" />
   </ItemGroup>
 
 
